--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
           I'm always looking for new challenges. In my free time I enjoy
           spending time with my family and listening to Rock and Roll music.
         </p>
-        <a class="btn" target="_blank" href="https://www.google.cl/"
+        <a class="btn" target="_blank" href="https://github.com/ignacioleonm"
           >See my work</a
-        >
+        > 
       </div>
     </section>
 
